Name:                KdTree

-- The package version. See the Haskell package versioning policy
-- (http://www.haskell.org/haskellwiki/Package_versioning_policy) for
-- standards guiding when and how versions should be incremented.
Version:             0.0.1.0
Synopsis:            KdTree, for efficient search in K-dimensional point clouds.
Description:         
    This is a simple library for k-d trees in Haskell. It enables
    searching through collections of points in O(log N) average time,
    using the nearestNeighbor(By) function.

Homepage:            https://github.com/LelserLasers/kdtree
License:             BSD3
License-file:        LICENSE
Author:              Millan Kumar
Maintainer:          lelserslasers@gmail.com
Copyright:           Copyright 2025, Millan Kumar, Issac Trotts & Contributors
Category:            Data Mining, Data Structures, Graphics, Machine Learning
Build-type:          Simple
Cabal-version:       >=1.10
Extra-source-files:  README

source-repository head
  type:     git
  location: git@github.com:LelsersLasers/kdtree.git

Library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:  Data.Trees.KdTree
  build-depends:    base < 5
                 ,  QuickCheck

